@@ -10,9 +10,9 @@
 
 <H2 Align=Center>Taken from the "Digital VT100 User Guide</H2>
 
-<P Align=Center>The following notes, relating to the VT-100 control
-sequences, are taken from the official <I>Digital VT100 User Guide</I>,
-and specifically from the <I>Programming</I> section therein.</P>
+<P Align=Justify>The following notes, relating to the VT100 control
+sequences, are taken from the <I>Programming</I> section of the official
+<I>Digital VT100 User Guide</I>.</P>
 
 <H3>Control Characters</H3>
 
@@ -32,7 +32,7 @@ follows, with all other control codes causing no action to be taken:</P>
 </TR>
 
 <TR>
-<TD Align=Center>NUL</TD>
+<TD Align=Center><A Name="NUL">NUL</TD>
 <TD Align=Center>000</TD>
 <TD Align=Center>00</TD>
 <TD><P Align=Justify>Ignored on input (not stored in buffer; see full
@@ -40,21 +40,21 @@ duplex protocol)</P></TD>
 </TR>
 
 <TR>
-<TD Align=Center>ENQ</TD>
+<TD Align=Center><A Name="ENQ">ENQ</TD>
 <TD Align=Center>005</TD>
 <TD Align=Center>05</TD>
 <TD><P Align=Justify>Transmit answerback message</P></TD>
 </TR>
 
 <TR>
-<TD Align=Center>BEL</TD>
+<TD Align=Center><A Name="BEL">BEL</TD>
 <TD Align=Center>007</TD>
 <TD Align=Center>07</TD>
 <TD><P Align=Justify>Sound bell tone from keyboard</P></TD>
 </TR>
 
 <TR>
-<TD Align=Center>BS</TD>
+<TD Align=Center><A Name="BS">BS</TD>
 <TD Align=Center>010</TD>
 <TD Align=Center>08</TD>
 <TD><P Align=Justify>Move the cursor to the left one character position,
@@ -62,15 +62,15 @@ unless it is at the left margin, in which case no action occurs</P></TD>
 </TR>
 
 <TR>
-<TD Align=Center>HT</TD>
+<TD Align=Center><A Name="HT">HT (TAB)</TD>
 <TD Align=Center>011</TD>
 <TD Align=Center>09</TD>
 <TD><P Align=Justify>Move the cursor to the next tab stop, or to the right
-margin if no further tab stops arfe present on the line</P></TD>
+margin if no further tab stops are present on the line</P></TD>
 </TR>
 
 <TR>
-<TD Align=Center>LF</TD>
+<TD Align=Center><A Name="LF">LF</TD>
 <TD Align=Center>012</TD>
 <TD Align=Center>0A</TD>
 <TD><P Align=Justify>This code causes a line feed or a new line operation
@@ -78,21 +78,21 @@ margin if no further tab stops arfe present on the line</P></TD>
 </TR>
 
 <TR>
-<TD Align=Center>VT</TD>
+<TD Align=Center><A Name="VT">VT</TD>
 <TD Align=Center>013</TD>
 <TD Align=Center>0B</TD>
-<TD><P Align=Justify>Interpreted as <B>LF</B></P></TD>
+<TD><P Align=Justify>Interpreted as <A HRef="#LF">LF</A></P></TD>
 </TR>
 
 <TR>
-<TD Align=Center>FF</TD>
+<TD Align=Center><A Name="FF">FF</TD>
 <TD Align=Center>014</TD>
 <TD Align=Center>0C</TD>
-<TD><P Align=Justify>Interpreted as <B>LF</B></P></TD>
+<TD><P Align=Justify>Interpreted as <A HRef="#LF">LF</A></P></TD>
 </TR>
 
 <TR>
-<TD Align=Center>CR</TD>
+<TD Align=Center><A Name="CR">CR</TD>
 <TD Align=Center>015</TD>
 <TD Align=Center>0D</TD>
 <TD><P Align=Justify>Move cursor to left margin on the current
@@ -100,38 +100,38 @@ line</P></TD>
 </TR>
 
 <TR>
-<TD Align=Center>SO</TD>
+<TD Align=Center><A Name="SO">SO</TD>
 <TD Align=Center>016</TD>
 <TD Align=Center>0E</TD>
-<TD><P Align=Justify>Invoke G1 character set, as designated by <B>SCS</B>
-control sequence</P></TD>
+<TD><P Align=Justify>Invoke G1 character set, as designated by <A
+HRef="#SCS">SCS</A> control sequence</P></TD>
 </TR>
 
 <TR>
-<TD Align=Center>SI</TD>
+<TD Align=Center><A Name="SI">SI</TD>
 <TD Align=Center>017</TD>
 <TD Align=Center>0F</TD>
-<TD><P Align=Justify>Invoke G0 character set, as designated by <B>ESC
-(</B> control sequence</P></TD>
+<TD><P Align=Justify>Invoke G0 character set, as designated by <A
+Href="#ESC">ESC</A> control sequence</P></TD>
 </TR>
 
 <TR>
-<TD Align=Center>XON</TD>
+<TD Align=Center><A Name="XON">XON</TD>
 <TD Align=Center>021</TD>
 <TD Align=Center>11</TD>
 <TD><P Align=Justify>Causes terminal to resume transmission</P></TD>
 </TR>
 
 <TR>
-<TD Align=Center>XOFF</TD>
+<TD Align=Center><A Name="XOFF">XOFF</TD>
 <TD Align=Center>022</TD>
 <TD Align=Center>12</TD>
 <TD><P Align=Justify>Causes terminal to stop transmission of all codes
-except <B>XOFF</B> and <B>XON</B></P></TD>
+except <A HRef="#XOFF">XOFF</A> and <A HRef="#XON">XON</A></P></TD>
 </TR>
 
 <TR>
-<TD Align=Center>CAN</TD>
+<TD Align=Center><A Name="CAN">CAN</TD>
 <TD Align=Center>030</TD>
 <TD Align=Center>18</TD>
 <TD><P Align=Justify>If sent during a control sequence, the sequence is
@@ -140,14 +140,14 @@ character to be displayed</P></TD>
 </TR>
 
 <TR>
-<TD Align=Center>SUB</TD>
+<TD Align=Center><A Name="SUB">SUB</TD>
 <TD Align=Center>032</TD>
 <TD Align=Center>1A</TD>
-<TD><P Align=Justify>Interpreted as <B>CAN</B></P></TD>
+<TD><P Align=Justify>Interpreted as <A HRef="#CAN">CAN</A></P></TD>
 </TR>
 
 <TR>
-<TD Align=Center>ESC</TD>
+<TD Align=Center><A Name="ESC">ESC</TD>
 <TD Align=Center>033</TD>
 <TD Align=Center>1B</TD>
 <TD><P Align=Justify>Aborts any control sequence in progress, and
@@ -155,7 +155,7 @@ introduces a control sequence</P></TD>
 </TR>
 
 <TR>
-<TD Align=Center>DEL</TD>
+<TD Align=Center><A Name="DEL">DEL</TD>
 <TD Align=Center>177</TD>
 <TD Align=Center>7F</TD>
 <TD><P Align=Justify>Ignored on input, not stored in input buffer</P></TD>
@@ -205,7 +205,7 @@ ANSI X-3.41 1974:</P>
 </TR>
 
 <TR>
-<TH Align=Center>CPR</TH>
+<TH Align=Center><A Name="CPR">CPR</TH>
 <TD Align=Center>&nbsp;</TD>
 <TD Align=Center>*</TD>
 <TD Align=Center>ESC [ <I>Pn</I> ; <I>Pn</I> R</TD>
@@ -214,7 +214,16 @@ ANSI X-3.41 1974:</P>
 </TR>
 
 <TR>
-<TH Align=Center>CUB</TH>
+<TD ColSpan=6><P Align=Justify>This sequencee reports the active position
+by means of the parameters. This sequence has two parameter values, the
+first specifying the line and the second specifying the column. The
+numbering of lines depends on the state of the Origin Mode (<A
+HRef="#DECOM">DECOM</A>). This control sequence is solicited by a device
+status report (<A HRef="#DSR">DSR</A>) sent from the host.</P></TD>
+</TR>
+
+<TR>
+<TH Align=Center><A Name="CUB">CUB</TH>
 <TD Align=Center>*</TD>
 <TD Align=Center>*</TD>
 <TD Align=Center>ESC [ <I>Pn</I> D</TD>
@@ -223,7 +232,17 @@ ANSI X-3.41 1974:</P>
 </TR>
 
 <TR>
-<TH Align=Center>CUD</TH>
+<TD ColSpan=6><P Align=Justify>This sequence moves the active position to
+the left. The distance moved is determined by the parameter. If the
+parameter value is zero or one, the active position is moved one position
+to the left. If the parameter value is <I>n</I> (where <I>n</I> is greater
+than one), the active position is moved <I>n</I> positions to the left. If
+an attempt is made to move the active position to the left of the left
+margin, the active position stops at the left margin.</P></TD>
+</TR>
+
+<TR>
+<TH Align=Center><A Name="CUD">CUD</TH>
 <TD Align=Center>*</TD>
 <TD Align=Center>*</TD>
 <TD Align=Center>ESC [ <I>Pn</I> B</TD>
@@ -232,7 +251,18 @@ ANSI X-3.41 1974:</P>
 </TR>
 
 <TR>
-<TH Align=Center>CUF</TH>
+<TD ColSpan=6><P Align=Justify>This sequence moves the active position
+downward without altering the column position. The distance moved is
+determined by the parameter. If the parameter value is zero or one, the
+active position is moved one line downward. If the parameter value is
+<I>n</I> (where <I>n</I> is greater than one), the active position is
+moved <I>n</I> lines downward. If an attempt is made to move the active
+position below the bottom margin, the active position stops at the bottom
+margin.</P></TD>
+</TR>
+
+<TR>
+<TH Align=Center><A Name="CUF">CUF</TH>
 <TD Align=Center>*</TD>
 <TD Align=Center>*</TD>
 <TD Align=Center>ESC [ <I>Pn</I> C</TD>
@@ -241,7 +271,17 @@ ANSI X-3.41 1974:</P>
 </TR>
 
 <TR>
-<TH Align=Center>CUP</TH>
+<TD ColSpan=6><P Align=Justify>This sequence moves the active position to
+the right. The distance moved is determined by the parameter. If the
+parameter value is zero or one, the active position is moved one position
+to the right. If the parameter value is <I>n</I> (where <I>n</I> is
+greater than one), the active position is moved <I>n</I> positions to the
+right. If an attempt is made to move the active position to the right of
+the right margin, the active position stops at the right margin.</P></TD>
+</TR>
+
+<TR>
+<TH Align=Center><A Name="CUP">CUP</TH>
 <TD Align=Center>*</TD>
 <TD Align=Center>&nbsp;</TD>
 <TD Align=Center>ESC [ <I>Pn</I> ; <I>Pn</I> H</TD>
@@ -250,12 +290,94 @@ ANSI X-3.41 1974:</P>
 </TR>
 
 <TR>
-<TH Align=Center>CUU</TH>
+<TD ColSpan=6><P Align=Justify>This sequence moves the active position to
+the position specified by the parameters. This sequence has two parameter
+values, the first specifying the line position and the second specifying
+the column position. A parameter value of zero or one for the first or
+second parameter moves the active position to the first line or column in
+the display respectively. The default condition with no parameters is
+equivalent to a "cursor to home" action. In the VT100, this sequence
+behaves identically with its format effector counterpart, <A
+HRef="#HVP">HVP</A>.</P></TD>
+</TR>
+
+<TR>
+<TH Align=Center><A Name="CUU">CUU</TH>
 <TD Align=Center>*</TD>
 <TD Align=Center>*</TD>
 <TD Align=Center>ESC [ <I>Pn</I> A</TD>
 <TD Align=Center>Cursor Up</TD>
 <TD Align=Center>1</TD>
+</TR>
+
+<TR>
+<TD ColSpan=6><P Align=Justify>This sequence moves the active position
+upward without altering the column position. The distance moved is
+determined by the parameter. If the parameter value is zero or one, the
+active position is moved one line upward. If the parameter value is
+<I>n</I> (where <I>n</I> is greater than one), the active position is
+moved <I>n</I> lines upward. If an attempt is made to move the active
+position above the top margin, the active position stops at the top
+margin.</P></TD>
+</TR>
+
+<TR>
+<TH Align=Center><A Name="DA">DA</TH>
+<TD Align=Center>*</TD>
+<TD Align=Center>&nbsp;</TD>
+<TD Align=Center>ESC [ <I>Pn</I> c</TD>
+<TD Align=Center>Device Attribute (Request)</TD>
+<TD Align=Center>0</TD>
+</TR>
+
+<TR>
+<TD ColSpan=6><P Align=Justify>The host requests the VT100 to send a
+device attribute (<A HRef="#DA2">DA</A>) control sequence to identify
+itself by sending this sequence with either no parameter or a parameter
+of zero.</P></TD>
+</TR>
+
+<TR>
+<TH Align=Center><A Name="DA2">DA</TH>
+<TD Align=Center>&nbsp;</TD>
+<TD Align=Center>*</TD>
+<TD Align=Center>ESC [ ? 1 ; <I>Pn</I> c</TD>
+<TD Align=Center>Device Attribute (Response)</TD>
+<TD Align=Center>N/A</TD>
+</TR>
+
+<TR>
+
+<TD ColSpan=6>
+
+<P Align=Justify>The response to the <A HRef="#DA">DA</A> request is
+generated by the VT100 as a <A HRef="#DA2">DA</A> control sequence with
+the numeric parameter being the arithmetic sum of the following:</P>
+
+<P Align=Justify> &nbsp; 1 &nbsp; Processor Option (STP)</P>
+
+<P Align=Justify> &nbsp; 2 &nbsp; Advanced Video Option (AVO)</P>
+
+<P Align=Justify> &nbsp; 4 &nbsp; Graphics Option (GPO)</P>
+
+<P Align=Justify>If no options are fitted, the value zero is
+returned.</P></TD>
+
+</TR>
+
+<TR>
+<TH Align=Center><A Name="DSR">DSR</TH>
+<TD Align=Center>*</TD>
+<TD Align=Center>*</TD>
+<TD Align=Center>ESC [ <I>Ps</I> n</TD>
+<TD Align=Center>Device Status Report</TD>
+<TD Align=Center>0</TD>
+</TR>
+
+<TR>
+
+<TD ColSpan=6><P Align=Justify></P></TD>
+
 </TR>
 
 <TR>
@@ -265,6 +387,192 @@ ANSI X-3.41 1974:</P>
 <TD Align=Center></TD>
 <TD Align=Center></TD>
 <TD Align=Center></TD>
+</TR>
+
+<TR>
+
+<TD ColSpan=6><P Align=Justify></P></TD>
+
+</TR>
+
+<TR>
+<TH Align=Center></TH>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+</TR>
+
+<TR>
+
+<TD ColSpan=6><P Align=Justify></P></TD>
+
+</TR>
+
+<TR>
+<TH Align=Center></TH>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+</TR>
+
+<TR>
+
+<TD ColSpan=6><P Align=Justify></P></TD>
+
+</TR>
+
+<TR>
+<TH Align=Center></TH>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+</TR>
+
+<TR>
+
+<TD ColSpan=6><P Align=Justify></P></TD>
+
+</TR>
+
+<TR>
+<TH Align=Center></TH>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+</TR>
+
+<TR>
+
+<TD ColSpan=6><P Align=Justify></P></TD>
+
+</TR>
+
+<TR>
+<TH Align=Center></TH>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+</TR>
+
+<TR>
+
+<TD ColSpan=6><P Align=Justify></P></TD>
+
+</TR>
+
+<TR>
+<TH Align=Center></TH>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+</TR>
+
+<TR>
+
+<TD ColSpan=6><P Align=Justify></P></TD>
+
+</TR>
+
+<TR>
+<TH Align=Center></TH>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+</TR>
+
+<TR>
+
+<TD ColSpan=6><P Align=Justify></P></TD>
+
+</TR>
+
+<TR>
+<TH Align=Center></TH>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+</TR>
+
+<TR>
+
+<TD ColSpan=6><P Align=Justify></P></TD>
+
+</TR>
+
+<TR>
+<TH Align=Center></TH>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+</TR>
+
+<TR>
+
+<TD ColSpan=6><P Align=Justify></P></TD>
+
+</TR>
+
+<TR>
+<TH Align=Center></TH>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+</TR>
+
+<TR>
+
+<TD ColSpan=6><P Align=Justify></P></TD>
+
+</TR>
+
+<TR>
+<TH Align=Center></TH>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+</TR>
+
+<TR>
+
+<TD ColSpan=6><P Align=Justify></P></TD>
+
+</TR>
+
+<TR>
+<TH Align=Center></TH>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+<TD Align=Center></TD>
+</TR>
+
+<TR>
+
+<TD ColSpan=6><P Align=Justify></P></TD>
+
 </TR>
 
 </Table>
